--- a/UI/styles/style.css
+++ b/UI/styles/style.css
@@ -31,7 +31,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.4;
-  color: #212529;
+  color: rgb(123, 125, 148);
   text-align: left;
   background-color: #fff;
 }
@@ -101,13 +101,10 @@ a {
     "hero hero hero";
 }
 
-.features, .about, .footer {
+.features, .about {
   padding: 20px 100px;
 }
 
-.features, .about {
-  /* max-width: 800px; */
-}
 
 .hero {
   grid-area: hero;
@@ -127,12 +124,14 @@ a {
 /* Navigation */
 .menu {
   grid-row: 1 / 1;
-  height: 40px;
+  height: 50px;
 }
 
 .menu ul {
+  height: inherit;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr))
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  align-items: center
 }
 
 .menu a {
@@ -182,6 +181,7 @@ a {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 50px;
+  margin: 100px 0;
 }
 
 .feature {
@@ -195,12 +195,23 @@ a {
   justify-items: center;
 }
 
-.feature p {
-  color: hsla(0, 0%, 40%);
+.features h5 {
+  color:rgb(123, 125, 148);
+}
+
+.feature-heading {
+  grid-column: 1 / -1;
 }
 
 .feature .icon {
   width: 140px;
   height: auto;
   margin-bottom: 20px;
+  /* border-bottom: 1px solid rgb(225, 225, 225); */
+}
+
+/* Footer */
+.footer {
+  padding: 20px 0;
+  text-align: center; 
 }
