--- a/UI/styles/style.css
+++ b/UI/styles/style.css
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: inherit;
   font-weight: 500;
   line-height: 1.2;
-  color: inherit;
+  color: rgb(84, 84, 84);
 }
 
 h1 {
@@ -86,6 +86,10 @@ ul {
 a {
   text-decoration: none;
 }
+
+.text-center {
+  text-align: center;
+}
 /* ========================================== End of Base Styles*/
 
 
@@ -93,7 +97,7 @@ a {
 .wrapper {
   display: grid;
   border: 0;
-  background: #eeeeee;
+  /* background: #eeeeee; */
 }
 
 /* top */
@@ -122,6 +126,7 @@ a {
 
 .hero > * {
   text-shadow: #000 2px 2px 15px;
+  color: white;
 }
 
 /* Navigation */
@@ -263,9 +268,10 @@ a {
 /* Features */ 
 .features {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 50px;
   margin: 100px 0;
+  background: #eeeeee;
 }
 
 .feature {
@@ -281,7 +287,7 @@ a {
 
 .feature-heading {
   grid-column: 1 / -1;
-  color:rgb(123, 125, 148);
+  /* color:rgb(123, 125, 148); */
   justify-self: center;
 }
 
