--- a/UI/styles/form.css
+++ b/UI/styles/form.css
@@ -23,7 +23,7 @@
     padding: 15px;
     margin: 5px 0;
     display: block;
-    border: 1px solid #EDEDED;
+    border: 1px solid #d3d3d3;
     border-radius: 4px;
     transition: 0.2s ease-out;
  }
