--- a/UI/styles/user-profile.css
+++ b/UI/styles/user-profile.css
@@ -1,3 +1,81 @@
+/* Base Syles ================================ */
+:root {
+  --black: #272727;
+  --blue: #0073d1;
+  --green: #06D19C;
+}
+
 .navbar li a {
    color: #7c7c7c !important;
 }
+
+/* Profile */
+.profile-page {
+  display: grid;
+  justify-items: center;
+  padding-top: 80px;
+}
+
+.profile-info {
+  width: 140px;
+  height: auto;
+}
+
+.profile-info img {
+  border-radius: 50%;
+}
+
+/* Rides */
+.num-of-rides {
+  width: 400px;
+  border: 1px solid grey;
+  padding: 20px;
+}
+
+.num-ride {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  margin: 10px 0;
+}
+
+.num-of-rides > p {
+  font-size: 1.3em;
+  margin: 0.5em 0;
+  /* border-top: 1px solid var(--blue) */
+}
+
+.ride-num {
+  padding: 5px 30px;
+  border-radius: 10px;
+  background: var(--blue);
+  color: white;
+  text-align: center;
+  /* display: inline-block; */
+}
+
+.rides-given {
+  display: grid;
+  grid-template-columns: repeat(minmax(200px, 1fr));
+  grid-gap: 20px;
+}
+
+.ride-img {
+  width: 150px;
+  height: auto;
+}
+/* .ride-wrapper {
+  display: grid;
+  grid-template-areas: 
+    img head head
+    img text text;
+   ;
+}
+
+.ride-heading {
+  grid-area: head;
+}
+
+.ride-body {
+  grid-area: text;
+} */
+
