--- a/UI/styles/user-profile.css
+++ b/UI/styles/user-profile.css
@@ -5,9 +5,9 @@
   --green: #06D19C;
 }
 
-.navbar li a {
+/* .navbar li a {
    color: #7c7c7c !important;
-}
+} */
 
 /* Profile */
 .profile-page {
@@ -28,8 +28,9 @@
 /* Rides */
 .num-of-rides {
   width: 400px;
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
   padding: 20px;
+  /* margin-right: 0 0px; */
 }
 
 .num-ride {
