--- a/UI/styles/rides.css
+++ b/UI/styles/rides.css
@@ -34,5 +34,9 @@
   /* border-bottom: 1px solid rgb(225, 225, 225); */
 }
 
-
 .icon {width: 100% !important;}
+
+.num-of-rides{
+  display: grid;
+  grid-template-columns: repeat(minmax(100px, 1fr))
+}
