--- a/UI/styles/rides.css
+++ b/UI/styles/rides.css
@@ -34,9 +34,26 @@
   /* border-bottom: 1px solid rgb(225, 225, 225); */
 }
 
-.icon {width: 100% !important;}
-
-.num-of-rides{
+.ride-options {
+  /* max-width: 800px; */
   display: grid;
-  grid-template-columns: repeat(minmax(100px, 1fr))
+  grid-gap: 20px;
+  justify-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  align-items: center;
+  padding-top: 100px;
+  /* padding-right: 450px;
+  padding-left: 450px; */
 }
+
+@media (max-width: 600px) {
+  .ride-options {
+    grid-template-columns: 1fr;
+    padding-top: 100px;
+    padding-bottom: 0;
+  }
+}
+
+/* .ride-options :first-child {
+  grid-column: 1 / 1;
+} */
