--- a/UI/styles/form.css
+++ b/UI/styles/form.css
@@ -46,7 +46,7 @@
 .form p {
   text-align: center;
 }
-/* 
-.navbar li a {
-   color: #7c7c7c !important;
-} */
+
+textarea {
+  font-family: "Helvetica Neue", sans-serif;
+}
