--- a/UI/styles/style.css
+++ b/UI/styles/style.css
@@ -167,6 +167,14 @@ textarea {
   /* margin-bottom: 50px; */
 }
 
+.navbar ul {
+   padding-left: 0px;
+}
+
+.box-shadow-none {
+  box-shadow: none;
+}
+
 .navbar li.logo,
 .navbar li.navbar_items {
   list-style-type: none;
