Add hover background color to buttons

--- a/UI/styles/form.css
+++ b/UI/styles/form.css
@@ -1,18 +1,19 @@
-  
 /* Base Syles ================================ */
 :root {
   --black: #272727;
-  --blue: rgb(0, 115, 209);
-  --green: #06D19C;
+  --blue: #0b7fdd;
+  --dark-blue: #0c6ebf;
+  --green: #06d19c;
+  --dark-green: #09bb8c;
 }
 
 .form-wrapper {
   display: grid;
-  place-items: center;
+  align-items: center;
+  justify-items: center;
   min-height: 540px;
   padding-top: 50px;
 }
-
 
 .form {
   width: 350px;
@@ -22,22 +23,22 @@
   padding: 20px;
 }
 
-.form-label  {
+.form-label {
   font-size: 2em;
   margin-bottom: 1em;
   text-align: center;
 }
 
- .form-control{
-    padding: 15px;
-    margin: 5px 0;
-    display: block;
-    border: 1px solid #d3d3d3;
-    border-radius: 4px;
-    transition: 0.2s ease-out;
- }
+.form-control {
+  padding: 15px;
+  margin: 5px 0;
+  display: block;
+  border: 1px solid #d3d3d3;
+  border-radius: 4px;
+  transition: 0.2s ease-out;
+}
 
- .form-control:focus{
+.form-control:focus {
   padding: 15px;
   outline: 0;
   border-color: var(--blue);
