--- a/UI/styles/style.css
+++ b/UI/styles/style.css
@@ -50,7 +50,7 @@ h6 {
   margin-bottom: 0.5rem;
   font-family: inherit;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.5;
   color: rgb(84, 84, 84);
 }
 
@@ -78,6 +78,10 @@ h6 {
   font-size: 1rem;
 }
 
+p {
+  line-height: 1.5em;
+}
+
 img {
   max-width: 100%;
 }
@@ -94,12 +98,9 @@ ul {
 a {
   text-decoration: none;
 }
-
-textarea {
-}
 /* ========================================== End of Base Styles*/
 
-/* Utility classes */
+/* Utility classes ========================*/
 .text-center {
   text-align: center;
 }
@@ -112,6 +113,7 @@ textarea {
 .mt-1 {
   margin: 3em 0;
 }
+/* End of utility classes ================================*/
 
 /* Wrapper */
 .wrapper {
@@ -379,9 +381,20 @@ textarea {
   margin-bottom: 20px;
 }
 
+/* About */
+.about {
+  display: grid;
+  justify-items: center;
+}
+
+.about__details p {
+  max-width: 500px;
+  line-height: 1.8em;
+}
+
 /* Footer */
 .footer {
-  padding: 20px 0;
+  padding: 30px 0;
   text-align: center;
   background-color: rgb(25, 39, 57);
   color: rgb(120, 208, 233);
