chore(Signup/Signin Pages): Change the background Image
- remove background color from navbar
- change the background color of the signin/signup page

--- a/UI/styles/form.css
+++ b/UI/styles/form.css
@@ -7,11 +7,24 @@
   --dark-green: #09bb8c;
 }
 
+.wrapper {
+  background-image: url("../images/cool-background.png");
+  background-color: rgb(25, 39, 57);
+  background-size: cover;
+  background-position: center;
+}
+/* 
+.navbar {
+  background: none !important;
+  box-shadow: none !important;
+  color: white !important;
+} */
+
 .form-wrapper {
   display: grid;
   align-items: center;
   justify-items: center;
-  min-height: 540px;
+  min-height: 561px;
   padding-top: 50px;
 }
 
@@ -21,6 +34,9 @@
   grid-template-columns: repeat(minmax(150px, 1fr));
   box-sizing: border-box;
   padding: 20px;
+  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+  background: white;
+  border-radius: 5px;
 }
 
 .form-label {
@@ -46,6 +62,10 @@
 
 .form p {
   text-align: center;
+}
+
+.footer p {
+  color: white;
 }
 
 textarea {
