feat(ride requests Page): redesign the ride requests page
- show ride requests
- show the ride heading
- show departure time of the ride
- show name of passenger requesting to join ride
- make the ride request page responsive
- show accept button to accept a ride request
- show a cancel button to cancel a ride request
- users profile page can be accessed when use logs in

[(Delivers) #158660981]

--- a/UI/styles/form.css
+++ b/UI/styles/form.css
@@ -7,24 +7,20 @@
   --dark-green: #09bb8c;
 }
 
-.wrapper {
+.wrapper2 {
+  display: grid;
   background-image: url("../images/cool-background.png");
   background-color: rgb(25, 39, 57);
   background-size: cover;
   background-position: center;
+  min-height: 100vh;
 }
-/* 
-.navbar {
-  background: none !important;
-  box-shadow: none !important;
-  color: white !important;
-} */
 
 .form-wrapper {
   display: grid;
   align-items: center;
   justify-items: center;
-  min-height: 561px;
+  /* min-height: 561px; */
   padding-top: 50px;
 }
 
