bug(Auth pages): Fix styling bug on sign in and sign up pages
- remove unused images from the ui
- style the sign in page
- make the page responsive
- style the sign up page
- make the page responsive

[(Fixes) #158684888]

--- a/UI/styles/form.css
+++ b/UI/styles/form.css
@@ -7,16 +7,9 @@
   --dark-green: #09bb8c;
 }
 
-<<<<<<< HEAD
-.wrapper {
-  /* background-image: url("../images/bridge.jpg"); */
-  background-color: #192739;
-=======
 .wrapper2 {
-  display: grid;
-  background-image: url("../images/cool-background.png");
-  background-color: rgb(25, 39, 57);
->>>>>>> 85fa34ce58785b226574b016d4bc8be91c3ee616
+  background-image: url("../images/blur.jpg");
+  background-color: #192739;
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -26,7 +19,7 @@
   display: grid;
   align-items: center;
   justify-items: center;
-  /* min-height: 561px; */
+  height: 80vh;
   padding-top: 50px;
 }
 
