--- a/UI/styles/form.css
+++ b/UI/styles/form.css
@@ -9,7 +9,7 @@
 
 .wrapper2 {
   background-image: url("../images/blur.jpg");
-  background-color: #192739;
+  /* background-color: #192739; */
   background-size: cover;
   background-position: center;
   min-height: 100vh;
