chore(Auth-pages): change the background image of sign and sign out pages
- change background image of sign in page
- change background image of sign out page

--- a/UI/styles/form.css
+++ b/UI/styles/form.css
@@ -8,7 +8,7 @@
 }
 
 .wrapper2 {
-  background-image: url("../images/blur.jpg");
+  background-image: url("http://res.cloudinary.com/dn6fnuhxr/image/upload/v1530273594/blur.jpg");
   background-color: #192739;
   background-size: cover;
   background-position: center;
