--- a/UI/styles/form.css
+++ b/UI/styles/form.css
@@ -5,6 +5,7 @@
   --dark-blue: #0c6ebf;
   --green: #06d19c;
   --dark-green: #09bb8c;
+  --dark: #192739;
 }
 
 .wrapper2 {
@@ -19,7 +20,7 @@
   display: grid;
   align-items: center;
   justify-items: center;
-  height: 100vh;
+  min-height: 100vh;
   padding-top: 20px;
 }
 
@@ -47,7 +48,7 @@
   display: block;
   border: 1px solid #d3d3d3;
   border-radius: 4px;
-  transition: 0.2s ease-out;
+  transition: 0.5s ease-in all;
 }
 
 .form-control:focus {
@@ -60,10 +61,66 @@
   text-align: center;
 }
 
+@media (max-width: 360px) {
+  .form {
+    max-width: 350px;
+  }
+}
+
 .footer p {
   color: white;
 }
 
 textarea {
   font-family: "Helvetica Neue", sans-serif;
+}
+
+/* loading animation for signup and sign in  */
+.loader-bg {
+  width: 100%;
+  height: 100%;
+  display: none;
+  grid-template-columns: 1fr;
+  align-items: center;
+  justify-items: center;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  position: fixed;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+.loader {
+  display: block;
+  border: 5px solid #eee;
+  border-top: 5px solid var(--dark);
+  border-radius: 50%;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* message */
+.message {
+  display: none;
+  padding: 15px 15px;
+  margin: 5px 0;
+  border-radius: 4px;
+  transition: 0.5s ease-in all;
+  background-color: #f04546;
+  color: white;
+  font-size: 18px;
+  text-align: center;
+  transition: s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
 }
