--- a/UI/styles/style.css
+++ b/UI/styles/style.css
@@ -8,8 +8,6 @@
   --white: #eee;
 }
 
-@import "https://fonts.googleapis.com/css?family=Quicksand";
-
 *,
 *::before,
 *::after {
@@ -94,6 +92,10 @@ ul {
   -webkit-margin-start: 0;
   -webkit-margin-end: 0;
   -webkit-padding-start: 0;
+}
+
+li {
+  list-style: none;
 }
 
 a {
@@ -292,7 +294,7 @@ a {
 
 /* Button styles ===============================*/
 .btn {
-  padding: 0.5rem 2rem;
+  padding: 0.9rem 2rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 5px;
